src/objects/Facility__c.object
<CustomObject>
    <description>Basic location &amp; facility management object. Could be a building, a classroom in a building, a sport stadium, or even a bus perhaps.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Facilities must belong to some sort of organization (or maybe a department which belongs to an organization)</description>
        <inlineHelpText>Select the entity which either owns or controls this facility</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address for this facility, if applicable</description>
        <label>Address</label>
        <referenceTo>hed__Address__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>The max number of people this facility can manage</description>
        <inlineHelpText>Please enter the max number of occupants if applicable</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A brief (255 char) description of this facility</description>
        <inlineHelpText>Please enter a brief description of this facility</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allow parent facilities so that you can have relationships such as room 102 in the High School Building</description>
        <inlineHelpText>If this is a room in a building (or simliar) please choose the facility in which it is located.</inlineHelpText>
        <label>Parent Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of facility</description>
        <inlineHelpText>Please select the type of facility</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Room</fullName>
                </value>
                <value>
                    <fullName>Sports Complex</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Facility</label>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>